--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Aeronautics -- Juvenile fiction'
 - !lcsh 'Women air pilots -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Girl Aviators on Golden Wings
 url: http://www.gutenberg.org/ebooks/6459
